# Client_Server_Over_CAN

./: .gitlab-ci.yml  Cargo.toml  README.md  client.sh  gitlab-runner_.deb  launch_communication.sh  server.sh  test_client.sh  test_server.sh
builds/t3_FuHHD9/0/Aymen-Besbes/client_server_over_can.tmp/git-template/: config
src/: VirCanCreation.sh  client.rs  config.rs  mod.rs  server.rs
src/config/: Config.toml  config.toml  default.json  default.toml  local.toml
