[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
socketcan = "1.7.0" 
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
confy = "0.6.1"
grafton-config = "*"
figment = "0.10.19"
lazy_static = "1.5.0"
serde_toml = "0.0.1"
serde_json = "1.0.132"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "config"
path = "src/config.rs"
